...

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="30dp"
        android:id="@+id/profileTitle"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/viewEventBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9968E6"
        android:drawableBottom="@android:drawable/ic_menu_view"
        android:text="View Event"
        android:layout_centerInParent="true"/>
...
